--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
         </div>
     </footer>
 
-    <script src="./dist/bundle.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
