--- a/single.html
+++ b/single.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Another site with wordpress">
     <meta name="theme-color" content="#fffff" />
-    <link rel="stylesheet" href="style.css" type="text/css" media="all" />
+    <link rel="stylesheet" href="./style.css" type="text/css" media="all" />
     <link rel="stylesheet" href="./styles/single.css">
     <title>مطلب آزمایشی</title>
 </head>
@@ -91,46 +91,28 @@
             <h1 id="commentsTitle">نظرات</h1>
             <h1 id="commentsNumber">15</h1>
         </div>
+
         <div id="comments">
             <div class="comment">
                 <div class="commentHeader">
-                    <div class="user">
-                        <img src="./icons/user.svg" alt="Profile Image" class="profileImg">
-                        <h1>نیما کشاورزیان</h1>
+                    <div class="profileAvatar">
+                        <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="user" class="svg-inline--fa fa-user fa-w-14" role="img" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512"><path fill="currentColor" d="M224 256c70.7 0 128-57.3 128-128S294.7 0 224 0 96 57.3 96 128s57.3 128 128 128zm89.6 32h-16.7c-22.2 10.2-46.9 16-72.9 16s-50.6-5.8-72.9-16h-16.7C60.2 288 0 348.2 0 422.4V464c0 26.5 21.5 48 48 48h352c26.5 0 48-21.5 48-48v-41.6c0-74.2-60.2-134.4-134.4-134.4z"></path></svg>
                     </div>
-                    <div class="commentDate">2021-09-08</div>
+                    <div class="profileName">
+                        <h1>لورم ایپسوم متن</h1>
+                    </div>
+                    <div class="commentDate">
+                        <h2>2021-09-08 | 22:30</h2>
+                    </div>
                 </div>
                 <div class="commentContent">
-                    <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
-                        کاربردی می باشد</p>
+                    <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ، و با استفاده از طراحان گرافیک است، چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است، و برای شرایط فعلی تکنولوژی مورد نیاز، و کاربردهای متنوع با هدف بهبود
+                        ابزارهای کاربردی می باشد، کتابهای زیادی در شصت و سه درصد گذشته حال و آینده، شناخت فراوان جامعه و متخصصان را می طلبد، تا با نرم افزارها شناخت بیشتری را برای طراحان رایانه ای علی الخصوص طراحان خلاقی، و فرهنگ پیشرو در زبان فارسی ایجاد
+                        کرد، در این صورت می توان امید داشت که تمام و دشواری موجود در ارائه راهکارها، و شرایط سخت تایپ به پایان رسد و زمان مورد نیاز شامل حروفچینی دستاوردهای اصلی، و جوابگوی سوالات پیوسته اهل دنیای موجود طراحی اساسا مورد استفاده قرار گیرد.
+                    </p>
                 </div>
             </div>
-            <div class="comment">
-                <div class="commentHeader">
-                    <div class="user">
-                        <img src="./icons/user.svg" alt="Profile Image" class="profileImg">
-                        <h1>نیما کشاورزیان</h1>
-                    </div>
-                    <div class="commentDate">2021-09-08</div>
-                </div>
-                <div class="commentContent">
-                    <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
-                        کاربردی می باشد</p>
-                </div>
-            </div>
-            <div class="comment">
-                <div class="commentHeader">
-                    <div class="user">
-                        <img src="./icons/user.svg" alt="Profile Image" class="profileImg">
-                        <h1>نیما کشاورزیان</h1>
-                    </div>
-                    <div class="commentDate">2021-09-08</div>
-                </div>
-                <div class="commentContent">
-                    <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است و برای شرایط فعلی تکنولوژی مورد نیاز و کاربردهای متنوع با هدف بهبود ابزارهای
-                        کاربردی می باشد</p>
-                </div>
-            </div>
+
         </div>
     </div>
     <br>
@@ -219,7 +201,7 @@
             <div class="linkToSocialMedia"></div>
         </div>
     </footer>
-    <script src="./dist/bundle.js"></script>
+    <script src="./js/index.js"></script>
 </body>
 
 </html>
